# collections-backup-utility

./: README.md  backup.py  pyproject.toml  requirements.txt
src/collections_backup/: __main__.py  core.py
systemd/: collections-backup.service  collections-backup.timer
tests/: test_core.py
