[project]
name = "collections-backup-utility"
version = "0.2.0"
description = "Backs up Alma electronic collections (MMS IDs per collection) for the CUNYs."
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collections_backup"]

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
